# optix

./: .gitignore  CLAUDE.md  FINAL_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  LICENSE  Makefile  README.md  TESTING.md  buf.gen.yaml  go.mod  go.sum
cmd/ibtest/: main.go
cmd/optix-cli/: main.go
cmd/optix-server/: main.go
configs/: optix.yaml
docs/: paper_trade_log.md  user_manual.md
docs/superpowers/plans/: 2026-03-21-full-integration-audit.md  2026-03-22-optix-skill-and-readme.md
docs/superpowers/specs/: 2026-03-21-full-integration-audit-design.md  (+5 more)
docs/tests/: DATA_CONSISTENCY_REPORT.md  FINAL_SUMMARY.md  PERFORMANCE_NOTES.md
internal/analysis/: client.go  client_integration_test.go
internal/broker/: broker.go  factory.go  fallback.go
internal/cli/: analyze.go  chain.go  dashboard.go  quote.go  root.go  server.go  watch.go
internal/scheduler/: batch.go  integration_test.go  scheduler.go  scheduler_test.go  task.go  worker.go
internal/server/: fetch.go  grpc.go  marketdata_svc.go
internal/watchlist/: watchlist.go
internal/webui/: broker_pool.go  broker_pool_test.go  cache.go  embed.go  handlers.go  handlers_test.go  live.go  proto_map.go  quotes.go  response_types.go  server.go  singleflight_test.go
pkg/model/: analysis.go  option.go  quote.go  quote_test.go
proto/: buf.yaml
python/: pyproject.toml
python/src/optix_engine/grpc_server/: analysis_servicer.py  server.py
python/src/optix_engine/options/: implied_vol.py  max_pain.py  open_interest.py  pricing.py  put_call_ratio.py
python/src/optix_engine/strategy/: recommender.py
python/src/optix_engine/technical/: indicators.py  support_resistance.py
python/tests/: test_pricing.py
scripts/: proto-gen.sh
(+21 files in other folders)
