[project]
name = "optix-engine"
version = "0.1.0"
description = "Options analysis and strategy recommendation engine for Optix"
requires-python = ">=3.11"
# Minimum 3.11 for performance; tested on 3.11–3.14.
# pandas-ta removed: numba incompatible with Python 3.14; custom indicators used instead.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "py_vollib>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optix_engine"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
